# mender-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
deploy/: README.md  config.env.example  deploy.sh  setup-secrets.sh
docs/: CAPTURE.md
prompts/finpay/: v1.yaml  v2.yaml  v3.yaml
src/finpay/: __init__.py  _runner.py  _telemetry.py  agent.py  prompts.py  server.py  tools.py  traffic.py
src/mender/: __init__.py  _model.py  _phoenix.py  _state.py  _telemetry.py  agent.py  cli.py  demo.py  mascot.py
src/mender/integrations/: __init__.py  slack.py
src/mender/pipeline/: __init__.py  detect.py  eval_gen.py  eval_run.py  hypothesize.py  incident.py  patch_gen.py  scorer.py  self_eval.py  self_introspect.py  self_tune.py  staging.py
src/mender/tools/: __init__.py  phoenix.py  traces.py
src/mender/web/: __init__.py  app.py
src/mender/web/static/: style.css
src/mender/web/templates/: about.html  base.html  incident.html  index.html  trend.html
